# koggi

./: .copilot-commit-message-instructions.md  .env-example  .gitignore  CHANGELOG.md  DEV-README.md  LICENSE  README.md  pp.sh  publish.py  pyproject.toml
.agents/skills/publish/: SKILL.md
.koggi/rclone/: setting.json
src/koggi/: __init__.py  __main__.py  binaries.py  cli.py
src/koggi/_bin/: README.md
src/koggi/binaries/: __init__.py  downloader.py
src/koggi/config/: env_loader.py
src/koggi/database/: backup.py  cleanup.py  restore.py
src/koggi/rc/: __init__.py  backup.py  commands.py  config.py  delete.py  restore.py
src/koggi/ui/: __init__.py  backup_selector.py
