[project]
name = "koggi"
version = "0.0.2"
description = "Simple CLI tool"
authors = [{name = "bamjun", email = "khy5116@naver.com"}]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["example", "uv", "tutorial"]
dependencies = []

[project.scripts]
koggi = "src.koggi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
github = "https://github.com/bamjun/koggi"
